[metadata]
name = andrea-allen
version = 1.1.0
author = Andrea Allen
author_email = andrea2allen@gmail.com
description = EpIntervene Simulation Package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andrea-allen/epintervene
project_urls =
    Bug Tracker = https://github.com/andrea-allen/epintervene/issues
    Documentation = https://github.com/andrea-allen/epintervene
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6